@@ -41,15 +41,18 @@ class Field
     Complex H2; // Hy or Hphi
     Complex Hz;
 
+    Complex S1() const {return E2*conj(Hz) - Ez*conj(H2);}
+    Complex S2() const {return Ez*conj(H1) - E1*conj(Hz);}
+    Complex Sz() const {return E1*conj(H2) - E2*conj(H1);} 
+
     Real abs_E() const
       {return sqrt(real(E1*conj(E1) + E2*conj(E2) + Ez*conj(Ez)));}
 
     Real abs_H() const
       {return sqrt(real(H1*conj(H1) + H2*conj(H2) + Hz*conj(Hz)));}
 
-    Complex S1() const {return E2*conj(Hz) - Ez*conj(H2);}
-    Complex S2() const {return Ez*conj(H1) - E1*conj(Hz);}
-    Complex Sz() const {return E1*conj(H2) - E2*conj(H1);}    
+    Real abs_S() const
+      {return sqrt(real(S1()*conj(S1()) + S2()*conj(S2()) + Sz()*conj(Sz())));}
 
     Field operator+ (const Field&)   const;
     Field operator- (const Field&)   const;
