@@ -1,3 +1,7 @@
+2002-09-12  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* field.h: Add abs_S.
+
 2002-08-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* __init__.py: Import camfr_tk by default.
